# spread-market

./: Anchor.toml  README.md  package.json
programs/mocks/: Cargo.toml
programs/mocks/src/: lib.rs  macros.rs
programs/mocks/src/instructions/: do_nothing.rs  mod.rs
programs/mocks/src/state/: pool_auth.rs
programs/spreadmarket/: Cargo.toml
programs/spreadmarket/src/: errors.rs  lib.rs  macros.rs  utils.rs
programs/spreadmarket/src/instructions/: buy_spread.rs  deposit.rs  end_market_epoch.rs  expire_market.rs  init_receipt.rs  init_vault.rs  init_vault_accs.rs  init_vault_accs_p1.rs  init_vault_accs_p2.rs  lend_funds.rs  mod.rs  redeem_spread.rs  remove_lend.rs  set_vol.rs  start_market_epoch.rs  withdraw.rs
programs/spreadmarket/src/state/: market_epoch.rs  mod.rs  spread_receipt.rs  spread_vault.rs
tests/: 00_init-vault.spec.ts  01_init-vault.spec.ts  02_deposit.spec.ts  03_start-market-epoch.spec.ts  04_buy-spread.spec.ts  spreadmarket.ts
tests/utils/: common.ts  genericTests.ts  mock.ts  pythMocks.ts
website/: TODO.txt
website/spreadmarket/: index.html  package.json  vite.config.ts
website/spreadmarket/src/: App.css  App.tsx  constants.tsx  index.css
website/spreadmarket/src/components/: InitVault.tsx  VaultMaintenance.tsx
website/spreadmarket/src/hooks/: useSendTx.tsx  useSpreadProgram.tsx
website/spreadmarket/src/package/: idl.ts  instructions.ts
website/spreadmarket/src/pages/: AdminPage.tsx  BuyerPage.tsx  Faucet.tsx  Landing.tsx  LpPage.tsx  VaultList.tsx
website/spreadmarket/src/utils/: derives.ts  gecko.ts  primitives.tsx  programs.ts  tx-utils.ts  types.ts
