[package]
name = "mocks"
version = "0.1.0"
description = "External program mocks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mocks"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []
devnet-deploy = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

bytemuck = { version = "1.7", features = ["derive"] }
static_assertions = "1.1.0"
psy-macros = "1.0.0"
clpcpi = {version = "0.1.2", features = [ "no-entrypoint" ]}