[package]
name = "spreadmarket"
version = "0.1.0"
description = "Delta neutral option vault product"
edition = "2021"
readme = "../../README.md"
authors = ["Jon Gurary <jongurary@live.com>"]
license = "AGPL-3.0-or-later"
keywords = ["defi", "solana", "options"]

[lib]
crate-type = ["cdylib", "lib"]
name = "spreadmarket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

#solana-program = "=1.16.23"
#solana-program = "=1.17.9"
#solana-program = "=1.18.1"

bytemuck = { version = "1.7", features = ["derive"] }
static_assertions = "1.1.0"
psy-macros = "1.0.0"
psyoracleutils = { version = "0.1.0", default-features = false, features = ["no-entrypoint"] }
# black_scholes = "0.10.1"